jenkins-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ojt-minhyeok-authorization
  namespace: KUBE_NAMESPACE
  labels:
    app: ojt-minhyeok-authorization
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1         # 롤링 업데이트 중 최대 몇 개를 생성할 지
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: ojt-minhyeok-authorization
  template:
    metadata:
      labels:
        app: ojt-minhyeok-authorization
    spec:
      containers:
        - name: ojt-minhyeok-authorization
          image: IMAGE_HOST/secaas/ojt-minhyeok-authorization:BUILD_NUMBER
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          ports:
            - containerPort: 9000
          readinessProbe:
            httpGet:
              path: /authorization/api/version
              port: 9000
            initialDelaySeconds: 10
            timeoutSeconds: 60
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: ojt-minhyeok-authorization
  namespace: KUBE_NAMESPACE
  labels:
    app: ojt-minhyeok-authorization
spec:
  selector:
    app: ojt-minhyeok-authorization
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-minhyeok
  namespace: dev
spec:
  ingressClassName: ingress-nginx-minhyeok
  rules:
    - host: ojt-minhyeok-authorization.softcamp.co.kr
      http:
        paths:
          - path: /authorization
            pathType: Prefix
            backend:
              service:
                name: ojt-minhyeok-authorization
                port:
                  number: 80
  tls:
    - hosts:
        - minhyeok-authorization.softcamp.co.kr
      secretName: ca-key-pair-softcamp
